frontend/test/should_pass/deleteInSubpattern.grg
rule r
{
	n:Node;
	p:P(n);
	
	modify {
		p();
	}
}

pattern P(n:Node)
{
	modify {
		delete(n);
	}
}
