frontend/test/should_fail/negative_008.grg
pattern p
{
    negative {
        iterated {
            n:Node;

            modify {
            }
        }
    }

    modify {
	}
}

